--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "^0.2.4"
   }
 }
